link target blank

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <div class="view_author"></div>
             <div class="view_desc"></div>
             <div class="download">
-                <a href="" class="download_thesis">Download Thesis</a>
-                <a href="" class="download_zip">Download Source Code</a>
+                <a href="" target="_blank" class="download_thesis">Download Thesis</a>
+                <a href="" target="_blank" class="download_zip">Download Source Code</a>
             </div>
         </div>
     </div>
